Begin working on overview page, got sidetracked and rehauled adjustHeight

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -4,9 +4,7 @@
       <h3 class="title">Mana Sanctuary</h3>
       <h4 class="subtitle">Project Team</h4>
     </div>
-    <p class="description">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet,
-      consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit
-      amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
+    <p class="description">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sitamet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
     <div class="discord">
       <a href="https://discord.gg/FPtYFtpUF3" target="_blank" class="hyperlink-image">
         <img src="../../assets/other/discord-bubble.png" alt="Discord Icon" class="icon">
