--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,11 +4,11 @@
       <a routerLink="/home">Mana</a>
     </li>
     <li class="menu-item">
-      <a>Healing Guide
+      <a routerLink="/healing">Healing
         <img src="../../assets/other/chevron-down.svg">
       </a>
       <div class="header-dropdown-menu">
-        <a routerLink="/healing-guide">
+        <a routerLink="/healing/healing-guide">
           <div class="title-tags">
             <span class="title">Guide</span>
           </div>
@@ -73,16 +73,16 @@
     <img class="menu-icon" src="../../assets/other/menu-icon.svg" alt="">
     <ul class="burger-menu">
       <li class="menu-item">
-        <a class="hyperlink" routerLink="/healing-guide">
+        <a class="hyperlink" routerLink="/healing">
           <div class="item-wrapper">
             <img src="../../assets/other/double-cross.svg" alt="Healing Guide Icon">
-            <span>Healing Guide</span>
+            <span>Healing</span>
           </div>
           <img src="../../assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
       <li class="menu-item">
-        <a class="hyperlink" routerLink="unit-page">
+        <a class="hyperlink" routerLink="/unit-page">
           <!-- Teams routing to /unitpage is temporary -->
           <div class="item-wrapper">
             <img src="../../assets/other/teams.svg" alt="Teans Icon">
