--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -16,7 +16,7 @@
                 <a routerLink="/home">Home</a>
             </li>
             <li>
-                <a routerLink="/healing-guide">Healing</a>
+                <a routerLink="/healing">Healing</a>
             </li>
             <li>
                 <a routerLink="/unit-page">Teams</a>
