--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
         <a routerLink="/home">Home</a>
       </li>
       <li>
-        <a routerLink="/healing-guide">Healing Guide</a>
+        <a routerLink="/healing">Healing</a>
       </li>
       <li>
         <a routerLink="/unit-page">Teams</a>
