--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,7 +68,7 @@ main {
         margin: 0 0 80px 0;
     }
 
-    app-units-index, app-unit-page, app-guides, app-healing-guide, app-about-us { // with how Angular loads pages, just do this for every main component
+    app-units-index, app-unit-page, app-guides, app-healing, app-healing-guide, app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -78,10 +78,12 @@ main {
     }
 
     app-page-not-found {
-        width: 100%;
-        display: flex;
-        align-items: center;
+        margin: unset;
         position: relative;
+    }
+
+    app-healing {
+        justify-content: unset;
     }
 }
 
