Add height resize function to all pages, small adjustments

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -97,7 +97,7 @@
             <img src="../../assets/other/double-cross.svg" alt="Benediction">
           </div>
         </div>
-        <a class="black-white-medium special" routerLink="/healing-guide">Healing Guide</a>
+        <a class="black-white-medium special" routerLink="/healing/healing-guide">Healing Guide</a>
         <div class="bottom-right">
           <div class="icon-block">
             <img src="../../assets/other/target.svg" alt="DPS">
