--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <main>
-    <router-outlet></router-outlet>
+    <router-outlet appDynamicContentHeight></router-outlet>
 </main>
 <app-footer></app-footer>
