--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,7 +61,7 @@ main {
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    // align-items: center; VERY NOT GOOD
 
     app-home {
         width: 100%;
@@ -73,17 +73,13 @@ main {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
         margin: 40px 0 80px 0;
     }
 
     app-page-not-found {
         margin: unset;
         position: relative;
-    }
-
-    app-healing {
-        justify-content: unset;
+        justify-content: center;
     }
 }
 
