Finish healing overview page, create empty h-teams & h-calculator component, add routing

--- a/src/app/healing/healing.component.html
+++ b/src/app/healing/healing.component.html
@@ -4,15 +4,33 @@
       <h3 class="title">Healing - Overview</h3>
       <h4 class="subtitle">Lorem Ipsum</h4>
     </div>
-    <p class="description">This section of the project is dedicated to Katherine Isley's so-called "Healing Guide". What started out as a humble Excel tabl- someone else finish the rest. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sitamet, consecte tur adipiscing elit.</p>
+    <p class="description">This section of the project is dedicated to Katherine Isley's so-called "Healing Guide". What started out as a humble Excel tabl- someone else finish the rest. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
   </div>
   <div class="entries">
-    <div class="entry">
+    <div class="entry" routerLink="/healing/healing-guide">
       <div class="card">
-      <img class="card-img-top" src="../../assets/backgrounds/placeholder_background.png" alt="Card image top">
+        <img class="card-img-top" src="../../assets/backgrounds/overview_background1.webp" alt="Card image top">
         <div class="card-body">
-          <h5 class="card-title">Void Abyss</h5>
-          <p class="card-text">In Void Abyss, The Wanderer must collect 3 keys in order challenge a powerful boss. Collectible buffs can be found and strategically transferred to party members to ensure a more successful boss fight.</p>
+          <h5 class="card-title">Healing Guide</h5>
+          <p class="card-text">A guide curated by the best European support players, such as Katherine Isley, Ren, and Lycrus, Kath's Healing Guide is an elaborate, beginner-friendly textbook for both new and old players, regardless of whether you lack experience or are a hardened veteran.</p>
+        </div>
+      </div>
+    </div>
+    <div class="entry" routerLink="/healing/healing-teams">
+      <div class="card">
+        <img class="card-img-top" src="../../assets/backgrounds/overview_background2.webp" alt="Card image top">
+        <div class="card-body">
+          <h5 class="card-title">Healing Teams</h5>
+          <p class="card-text">A section of the Healing Guide dedicated solely to team compositions - have a look at pre-existing meta comps, specific niche comps, and those for ranking modes like Origin of War. Teams range from fitting F2P to whales.</p>
+        </div>
+      </div>
+    </div>
+    <div class="entry" routerLink="/healing/healing-calculator">
+      <div class="card">
+        <img class="card-img-top" src="../../assets/backgrounds/overview_background3.webp" alt="Card image top">
+        <div class="card-body">
+          <h5 class="card-title">Healing Calculator</h5>
+          <p class="card-text">A calculator that allows you to figure out the amount of healing, shielding, and other utility a character can provide based on their stats, equipment, and other factors. Not limited to just numberical results, the calculator also points out other strengths and niches.</p>
         </div>
       </div>
     </div>
