Add unit/matrix select design to calculator, fetch unit data for unit selector, remove "../../" when sourcing images (except from SCSS imports)

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -7,7 +7,7 @@
     <p class="description">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sitamet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
     <div class="discord">
       <a href="https://discord.gg/FPtYFtpUF3" target="_blank" class="hyperlink-image">
-        <img src="../../assets/other/discord-bubble.png" alt="Discord Icon" class="icon">
+        <img src="assets/other/discord-bubble.png" alt="Discord Icon" class="icon">
       </a>
       <p class="text">If you wish to help with this project and become part of the team or join the Tower of Fantasy
         crew you can contact us on
