--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,31 +1,31 @@
 <div class="announcement">
   <div class="announcement-container">
-    <img src="../../assets/other/white-check-circle.svg" alt="Check Circle">
+    <img src="assets/other/white-check-circle.svg" alt="Check Circle">
     <span class="announcement-text">1.0 Update Notes - Launch! Nan Yin, Raid Guide and more...</span>
   </div>
   <div class="join-discord">
     <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink-container" target="_blank">
       <span class="join-text">Join us on Discord </span>
-      <img src="../../assets/other/discord-icon.png" alt="Discord Icon">
+      <img src="assets/other/discord-icon.png" alt="Discord Icon">
     </a>
   </div>
 </div>
 <section class="banner">
   <splide [options]="{type: 'loop', perPage: 1, autoplay: true, interval: 5000}" containerClass="splide-fix">
     <splide-slide>
-      <img src="../../assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.jpg"/>
     </splide-slide>
     <splide-slide>
-      <img src="../../assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.jpg"/>
     </splide-slide>
     <splide-slide>
-      <img src="../../assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.jpg"/>
     </splide-slide>
     <splide-slide>
-      <img src="../../assets/backgrounds/banner_background.jpg"/>
+      <img src="/backgrounds/banner_background.jpg"/>
     </splide-slide>
     <splide-slide>
-      <img src="../../assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.jpg"/>
     </splide-slide>
   </splide>
   <div class="content-container">
@@ -94,13 +94,13 @@
             <span>For the guardian...</span>
           </div>
           <div class="icon-block">
-            <img src="../../assets/other/double-cross.svg" alt="Benediction">
+            <img src="assets/other/double-cross.svg" alt="Benediction">
           </div>
         </div>
-        <a class="black-white-medium special" routerLink="/healing/healing-guide">Healing Guide</a>
+        <a class="black-white-medium special" routerLink="/healing/guide">Healing Guide</a>
         <div class="bottom-right">
           <div class="icon-block">
-            <img src="../../assets/other/target.svg" alt="DPS">
+            <img src="assets/other/target.svg" alt="DPS">
           </div>
           <div class="text-rectangle">
             <span>...and the guarded.</span>
@@ -119,7 +119,7 @@
             <h5 class="title">DPS</h5>
             <div class="items-container">
               <div class="icon-block">
-                <img src="../../assets/other/target.svg" alt="DPS">
+                <img src="assets/other/target.svg" alt="DPS">
               </div>
               <div class="stat-wrapper">
                 <div class="anim-bars-container">
@@ -128,9 +128,9 @@
                   <div class="anim-bar" id="tank"></div>
                 </div>
                 <div class="icons-container">
-                  <img src="../../assets/other/tiny-single-cross.svg" alt="Heal">
-                  <img src="../../assets/other/tiny-target.svg" alt="Damage">
-                  <img src="../../assets/other/tiny-shield.svg" alt="Tank">
+                  <img src="assets/other/tiny-single-cross.svg" alt="Heal">
+                  <img src="assets/other/tiny-target.svg" alt="Damage">
+                  <img src="assets/other/tiny-shield.svg" alt="Tank">
                 </div>
               </div>
             </div>
@@ -139,7 +139,7 @@
             <h5 class="title">HEAL</h5>
             <div class="items-container">
               <div class="icon-block">
-                <img src="../../assets/other/double-cross.svg" alt="Heal">
+                <img src="assets/other/double-cross.svg" alt="Heal">
               </div>
               <div class="stat-wrapper">
                 <div class="anim-bars-container">
@@ -148,9 +148,9 @@
                   <div class="anim-bar" id="tank"></div>
                 </div>
                 <div class="icons-container">
-                  <img src="../../assets/other/tiny-single-cross.svg" alt="Heal">
-                  <img src="../../assets/other/tiny-target.svg" alt="Damage">
-                  <img src="../../assets/other/tiny-shield.svg" alt="Tank">
+                  <img src="assets/other/tiny-single-cross.svg" alt="Heal">
+                  <img src="assets/other/tiny-target.svg" alt="Damage">
+                  <img src="assets/other/tiny-shield.svg" alt="Tank">
                 </div>
               </div>
             </div>
@@ -159,7 +159,7 @@
             <h5 class="title">TANK</h5>
             <div class="items-container">
               <div class="icon-block">
-                <img src="../../assets/other/shield.svg" alt="Tank">
+                <img src="assets/other/shield.svg" alt="Tank">
               </div>
               <div class="stat-wrapper">
                 <div class="anim-bars-container">
@@ -168,18 +168,17 @@
                   <div class="anim-bar" id="tank"></div>
                 </div>
                 <div class="icons-container">
-                  <img src="../../assets/other/tiny-single-cross.svg" alt="Heal">
-                  <img src="../../assets/other/tiny-target.svg" alt="Damage">
-                  <img src="../../assets/other/tiny-shield.svg" alt="Tank">
+                  <img src="assets/other/tiny-single-cross.svg" alt="Heal">
+                  <img src="assets/other/tiny-target.svg" alt="Damage">
+                  <img src="assets/other/tiny-shield.svg" alt="Tank">
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="buttons-block">
-          <a routerLink="" class="black-white-medium">Teams</a>
-          <a routerLink="" class="black-white-medium">Calculator</a>
-          <!-- TODO: Change both of these to Angular components for the router later -->
+          <a routerLink="/healing/teams" class="black-white-medium">Teams</a>
+          <a routerLink="/healing/calculator" class="black-white-medium">Calculator</a>
         </div>
       </div>
     </div>
@@ -202,9 +201,9 @@
         Have questions, found a bug or want to discuss?
       </span>
       <div class="images">
-        <img src="../../assets/other/huma-book.webp" alt="Huma Sticker">
-        <img src="../../assets/other/discord-big.png" alt="Discord Logo">
-        <img src="../../assets/other/huma-meryl-think.webp" alt="Huma and Meryl Sticker">
+        <img src="assets/other/huma-book.webp" alt="Huma Sticker">
+        <img src="assets/other/discord-big.png" alt="Discord Logo">
+        <img src="assets/other/huma-meryl-think.webp" alt="Huma and Meryl Sticker">
       </div>
       <span class="subtitle">
         Join our community on <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink">Discord</a> and just @Kath
