--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,22 +5,22 @@
     </li>
     <li class="menu-item">
       <a routerLink="/healing">Healing
-        <img src="../../assets/other/chevron-down.svg">
+        <img src="assets/other/chevron-down.svg">
       </a>
       <div class="header-dropdown-menu">
-        <a routerLink="/healing/healing-guide">
+        <a routerLink="/healing/guide">
           <div class="title-tags">
             <span class="title">Guide</span>
           </div>
           <p class="description">truly worthy of a reddit gold</p>
         </a>
-        <a routerLink="">
+        <a routerLink="/healing/teams">
           <div class="title-tags">
             <span class="title">Teams</span>
           </div>
           <p class="description">don't show this to eren he might just MA all over the page</p>
         </a>
-        <a routerLink="" class="beta">
+        <a routerLink="/healing/calculator" class="beta">
           <div class="title-tags">
             <span class="title">Calculator</span>
             <span class="beta-tag-dd">Beta</span>
@@ -38,7 +38,7 @@
     </li>
     <li class="menu-item beta">
       <a>Index
-        <img src="../../assets/other/chevron-down.svg">
+        <img src="assets/other/chevron-down.svg">
       </a>
       <div class="header-dropdown-menu">
         <a routerLink="/units-index">
@@ -70,22 +70,22 @@
     <h3 class="home">
       <a routerLink="/home">Mana</a>
     </h3>
-    <img class="menu-icon" src="../../assets/other/menu-icon.svg" alt="">
+    <img class="menu-icon" src="assets/other/menu-icon.svg" alt="">
     <ul class="burger-menu">
       <li class="menu-item">
         <a class="hyperlink" routerLink="/healing">
           <div class="item-wrapper">
-            <img src="../../assets/other/double-cross.svg" alt="Healing Guide Icon">
+            <img src="assets/other/double-cross.svg" alt="Healing Guide Icon">
             <span>Healing</span>
           </div>
-          <img src="../../assets/other/arrow-right.svg" alt="Right Arrow">
+          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
       <li class="menu-item">
         <a class="hyperlink" routerLink="/unit-page">
           <!-- Teams routing to /unitpage is temporary -->
           <div class="item-wrapper">
-            <img src="../../assets/other/teams.svg" alt="Teans Icon">
+            <img src="assets/other/teams.svg" alt="Teans Icon">
             <span>Teams</span>
           </div>
           <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
@@ -94,28 +94,28 @@
       <li class="menu-item">
         <a class="hyperlink" routerLink="/guides">
           <div class="item-wrapper">
-            <img src="../../assets/other/guides.svg" alt="Guides Icon">
+            <img src="assets/other/guides.svg" alt="Guides Icon">
             <span>Guides</span>
           </div>
-          <img src="../../assets/other/arrow-right.svg" alt="Right Arrow">
+          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
       <li class="menu-item beta">
         <a class="hyperlink" routerLink="/units-index">
           <div class="item-wrapper">
-            <img src="../../assets/other/guides.svg" alt="Beta Icon">
+            <img src="assets/other/guides.svg" alt="Beta Icon">
             <span>Index</span>
           </div>
-          <img src="../../assets/other/arrow-right.svg" alt="Right Arrow">
+          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
       </li>
       <li class="menu-item">
         <a class="hyperlink" routerLink="/about-us">
           <div class="item-wrapper">
-            <img src="../../assets/other/dev.svg" alt="About Us Icon">
+            <img src="assets/other/dev.svg" alt="About Us Icon">
             <span>About Us</span>
           </div>
-          <img src="../../assets/other/arrow-right.svg" alt="Right Arrow">
+          <img src="assets/other/arrow-right.svg" alt="Right Arrow">
         </a>
     </ul>
   </div>
