--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,32 +1,32 @@
 <div class="background"></div>
 <section class="main">
-    <div class="e404">
-        <h1 class="error-code">404</h1>
-        <div class="message">
-            <span>Looks like you're a bit lost.</span>
-            <h2>Page Not Found</h2>
-            <span>This page doesn't exist.</span>
-        </div>
+  <div class="e404">
+    <h1 class="error-code">404</h1>
+    <div class="message">
+      <span>Looks like you're a bit lost.</span>
+      <h2>Page Not Found</h2>
+      <span>This page doesn't exist.</span>
     </div>
-    <div class="lead">
-        <span>Not to worry! Let's get you back somewhere useful.</span>
-        <img class="pipeline" src="../../assets/other/pipeline.svg" alt="Pipeline">
-        <ul class="pages">
-            <li>
-                <a routerLink="/home">Home</a>
-            </li>
-            <li>
-                <a routerLink="/healing">Healing</a>
-            </li>
-            <li>
-                <a routerLink="/unit-page">Teams</a>
-            </li>
-            <li>
-                <a routerLink="/guides">Guides</a>
-            </li>
-            <li>
-                <a routerLink="/units-index">Index</a>
-            </li>
-        </ul>
-    </div>
+  </div>
+  <div class="lead">
+    <span>Not to worry! Let's get you back somewhere useful.</span>
+    <img class="pipeline" src="assets/other/pipeline.svg" alt="Pipeline">
+    <ul class="pages">
+      <li>
+        <a routerLink="/home">Home</a>
+      </li>
+      <li>
+        <a routerLink="/healing">Healing</a>
+      </li>
+      <li>
+        <a routerLink="/unit-page">Teams</a>
+      </li>
+      <li>
+        <a routerLink="/guides">Guides</a>
+      </li>
+      <li>
+        <a routerLink="/units-index">Index</a>
+      </li>
+    </ul>
+  </div>
 </section>
