Add Role filter

--- a/src/app/unit-card/unit-card.component.html
+++ b/src/app/unit-card/unit-card.component.html
@@ -11,12 +11,12 @@
             <img src="assets/elements/{{unit.element}}.png" alt="{{unit.element}} element">
           </div>
           <div class="buffs">
-            <img *ngIf="unit.isDPS" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isBuffer" src="assets/effects/buff_buffer.png" alt="Main DPS">
-            <img *ngIf="unit.isHeal" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isHealB" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isShatter" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isTaunt" src="assets/effects/buff_mdps.png" alt="Main DPS">
+            <img *ngIf="unit.isMDPS" src="assets/effects/buff_mdps.png" alt="Main DPS">
+            <img *ngIf="unit.isBuffer" src="assets/effects/buff_buffer.png" alt="DPS Buffer">
+            <img *ngIf="unit.isHeal" src="assets/effects/buff_healer.png" alt="Healer">
+            <img *ngIf="unit.isSupportBuffer" src="assets/effects/buff_supportbuffer.png" alt="Support Buffer">
+            <img *ngIf="unit.isShatter" src="assets/effects/buff_shatter.png" alt="Shatter">
+            <img *ngIf="unit.isTaunt" src="assets/effects/buff_taunt.png" alt="Taunt">
           </div>
         </div>
       </div>
@@ -35,12 +35,12 @@
             <img src="assets/elements/{{unit.element}}.png" alt="{{unit.element}} element">
           </div>
           <div class="buffs">
-            <img *ngIf="unit.isDPS" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isBuffer" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isHeal" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isHealB" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isShatter" src="assets/effects/buff_mdps.png" alt="Main DPS">
-            <img *ngIf="unit.isTaunt" src="assets/effects/buff_mdps.png" alt="Main DPS">
+            <img *ngIf="unit.isMDPS" src="assets/effects/buff_mdps.png" alt="Main DPS">
+            <img *ngIf="unit.isBuffer" src="assets/effects/buff_buffer.png" alt="DPS Buffer">
+            <img *ngIf="unit.isHeal" src="assets/effects/buff_healer.png" alt="Healer">
+            <img *ngIf="unit.isSupportBuffer" src="assets/effects/buff_supportbuffer.png" alt="Support Buffer">
+            <img *ngIf="unit.isShatter" src="assets/effects/buff_shatter.png" alt="Shatter">
+            <img *ngIf="unit.isTaunt" src="assets/effects/buff_taunt.png" alt="Taunt">
           </div>
         </div>
       </div>
