--- a/src/app/units-index/units-index.component.html
+++ b/src/app/units-index/units-index.component.html
@@ -33,6 +33,17 @@
         <img src="../assets/elements/fortitude.png" alt="Fortitude Type" data-type="fortitude">
       </div>
     </div>
+    <div class="role">
+      <h5 class="title">Role</h5>
+      <div class="wrapper">
+        <img src="../assets/effects/buff_mdps.png" alt="DPS Role" data-role="mdps">
+        <img src="../assets/effects/buff_buffer.png" alt="Buffer DPS Role" data-role="buffer">
+        <img src="../assets/effects/buff_healer.png" alt="Healer Role" data-role="healer">
+        <img src="../assets/effects/buff_supportbuffer.png" alt="Support Buffer Role" data-role="supportbuffer">
+        <img src="../assets/effects/buff_shatter.png" alt="Shatter Role" data-role="shatter">
+        <img src="../assets/effects/buff_taunt.png" alt="Taunt Role" data-role="taunt">
+      </div>
+    </div>
   </div>
   <div class="all-unit-index">
     <app-unit-card *ngFor="let unit of units" [unit]="unit"></app-unit-card>
